@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
 #
 
+2004-04-27 21:54:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-9
+
+    Summary:
+      Adjusted definition of defaults to not explicitly pass sname, oname all the time
+    Revision:
+      missinglib--head--0.0--patch-9
+
+
+    modified files:
+     ChangeLog libsrc/configParser/configParser.ml
+
+
 2004-04-27 21:52:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-8
 
     Summary:
